--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,11 +8,13 @@
     /* Modern todo app color palette */
     --background: 240 10% 98%;
     --background-secondary: 245 15% 96%;
-    --foreground: 215 28% 27%; /* slate 700 */
+    --foreground: 215 28% 27%;
+    /* slate 700 */
 
     --card: 0 0% 100%;
     --card-foreground: 215 28% 27%;
-    --card-shadow: 218 36% 18%; /* slate 800 */
+    --card-shadow: 218 36% 18%;
+    /* slate 800 */
 
     --popover: 0 0% 100%;
     --popover-foreground: 215 28% 27%;
@@ -27,7 +29,8 @@
     --secondary-foreground: 240 6% 10%;
 
     --muted: 240 5% 96%;
-    --muted-foreground: 215 18% 47%; /* slate-500 */
+    --muted-foreground: 215 18% 47%;
+    /* slate-500 */
 
     --accent: 204 94% 94%;
     --accent-foreground: 204 100% 40%;
@@ -41,26 +44,21 @@
     --info: 226, 100%, 63%;
     --destructive-foreground: 0 0% 98%;
 
-    --border: 214 32% 91%; /* slate-200 */
+    --border: 214 32% 91%;
+    /* slate-200 */
     --input: 210 40% 96%;
     --ring: 258 89% 65%;
 
     /* Gradients */
-    --gradient-primary: linear-gradient(
-      135deg,
-      hsl(255 92% 76%) 0%,
-      hsl(263 69% 50%) 100%
-    );
-    --gradient-background: linear-gradient(
-      135deg,
-      hsl(240 10% 98%) 0%,
-      hsl(245 15% 96%) 100%
-    );
-    --gradient-card: linear-gradient(
-      135deg,
-      hsl(0 0% 100%) 0%,
-      hsl(240 10% 99%) 100%
-    );
+    --gradient-primary: linear-gradient(135deg,
+        hsl(255 92% 76%) 0%,
+        hsl(263 69% 50%) 100%);
+    --gradient-background: linear-gradient(135deg,
+        hsl(240 10% 98%) 0%,
+        hsl(245 15% 96%) 100%);
+    --gradient-card: linear-gradient(135deg,
+        hsl(0 0% 100%) 0%,
+        hsl(240 10% 99%) 100%);
 
     /* Shadows */
     --shadow-sm: 0 1px 2px 0 hsl(218 36% 18% / 0.05);
@@ -91,6 +89,13 @@
     --sidebar-border: 220 13% 91%;
 
     --sidebar-ring: 217.2 91.2% 59.8%;
+  }
+/* Chuyển trang không bị nháy trắng */
+  html, 
+  body,
+  #root {
+    height: 100%;
+    background-color: #272A39;
   }
 
   .dark {
@@ -147,6 +152,7 @@
     clip-path: polygon(0 10%, 100% 0, 100% 100%, 0% 100%);
   }
 }
+
 @layer utilities {
   .clip-trapezoidright {
     clip-path: polygon(0 0%, 100% 10%, 100% 100%, 0% 100%);
